# 2d-game-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  demo.py  demo_movement_blocks.py  invoke.yaml  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: python-poetry-package.yml
docs/: index.html  search.js  two_d_game_ai.html
docs/two_d_game_ai/: entities.html  geometry.html  pathfinding.html  render.html  view.html  world.html
docs/two_d_game_ai/entities/: bot.html  generic_entities.html  generic_entity.html  movement_block.html  observer_pattern.html  obstacles.html
docs/two_d_game_ai/geometry/: bearing.html
docs/two_d_game_ai/view/: bot_renderer.html  colors.html  generic_entity_renderer.html  movement_block_renderer.html  obstacle_renderers.html  primitives.html  view.html  world_renderer.html
docs/two_d_game_ai/world/: grid.html  grid_ref.html  priority_queue.html  world.html
examples/: __init__.py  following.py  movement_blocks.py  obstacles.py  one_bot.py  problem_case_1.py  two_bots.py  zombies.py
examples/logging_config/: __init__.py
src/: bot.py  demo.py  demo_headless.py  demo_setup.py  maths.py  view.py  world.py
tests/: __init__.py  test_bearing.py  test_bot.py  test_maths.py  test_navigation.py  test_observer.py  test_view.py  test_world.py  test_world_integration.py
tests/entities/: __init__.py  test_bot.py  test_generic_entity.py  test_movement_block.py  test_observer.py  test_obstacle.py  test_obstacles.py  test_subject.py
tests/geometry/: __init__.py  test_bearing.py
tests/pathfinding/: __init__.py  test_grid.py  test_grid_ref.py
tests/render/: __init__.py  test_view.py
tests/view/: __init__.py  test_block_renderer.py  test_bot_renderer.py  test_obstacle_renderer.py  test_view.py  test_world_renderer.py
tests/world/: __init__.py  test_grid.py  test_grid_ref.py  test_world.py  test_world_integration.py
two_d_game_ai/: __init__.py  bearing.py  bot.py  demo.py  maths.py  navigation.py  observer.py  view.py  world.py
two_d_game_ai/entities/: __init__.py  bot.py  generic_entities.py  generic_entity.py  movement_block.py  observer.py  observer_pattern.py  obstacle.py  obstacles.py  subject.py
two_d_game_ai/geometry/: __init__.py  bearing.py  utils.py
two_d_game_ai/navigation/: __init__.py  bearing.py
two_d_game_ai/pathfinding/: __init__.py  grid.py  grid_ref.py  priority_queue.py
two_d_game_ai/render/: __init__.py  bot_renderer.py  botrenderer.py  colors.py  generic_entity_renderer.py  movement_block_renderer.py  primitives.py  view.py
two_d_game_ai/view/: __init__.py  bot_renderer.py  colors.py  generic_entity_renderer.py  movement_block_renderer.py  obstacle_renderer.py  obstacle_renderers.py  primitives.py  view.py  world_renderer.py
two_d_game_ai/world/: __init__.py  grid.py  grid_ref.py  grid_tools.py  priority_queue.py  world.py
